loaded wrong project

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = sparkfun_promicro16
 framework = arduino
-upload_port = /dev/ttyACM0
+lib_deps = HID
+	z3t0/IRremote@^3.5.1
+	arduino-libraries/Keyboard@^1.0.4
